Improved error handling. Added favicon.ico to prevent 'NoResourceFoundException'